# trees-rs

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build.yml  cargo.yml  coverage.yml
src/: main.rs
src/canva/: ansi.rs  buffer.rs  mod.rs
src/canva/attr/: atime.rs  btime.rs  mtime.rs  pms.rs  size.rs
src/canva/entree/: dirr.rs  filee.rs  headd.rs  symlinked.rs
src/canva/which/: entree.rs  headerr.rs  mod.rs
src/canva/which/attr/: atime.rs  btime.rs  date.rs  mod.rs  mtime.rs  perm.rs  pms.rs  size.rs
src/canva/which/entree/: filee.rs  headd.rs  mod.rs
src/cli/: app.rs  arg.rs  args.rs  mod.rs  opt.rs  opts.rs
src/config/: color.rs  ignore.rs  inspect.rs  mod.rs  path.rs  registry.rs  root.rs  sortt.rs
src/crates/PathIterator/: Cargo.toml
src/error/: simple.rs
src/output/: mod.rs
src/render/: attributes.rs  buffer.rs  color.rs  filter.rs  fsentry.rs  mod.rs
src/render/attr/: atime.rs  btime.rs  mtime.rs  pms.rs  size.rs
src/render/entree/: dirr.rs  filee.rs  headd.rs  mod.rs  symlinked.rs
src/report/: depth.rs  head.rs  mod.rs  size.rs  stats.rs  tail.rs  widest.rs
src/sort/: dent.rs  mod.rs
src/tree/: branch.rs  level.rs  mod.rs  node.rs
src/walk/: fent.rs  metada.rs  mod.rs  tr.rs  trctxt.rs  visit.rs
test/sym_dir/: sym
