[package]
name = "trees-rs"
version = "0.1.1"
edition = "2021"
authors = ["allaboutevemirolive<akmal.fir010@gmail.com>"]
description = "tree-rs is a drop-in replacement for the tree utility (ASCII tree view of folder directory), but written in Rust. The primary goal of this project is to provide a non-bloated and more functional alternative to the existing tree utility."
license = "MIT OR Apache-2.0"

[[bin]]
name = "trees-rs" 
path = "src/main.rs" 

[dependencies]
chrono = "0.4.37"
clap = "4.5.4"
tempfile = "3.10.1"
phf = { version = "0.11", features = ["macros"] }
winapi = "0.3.9"
anyhow = "1.0.86"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
globset = "0.4.14"
ignore = "0.4.23"
once_cell = "1.20.2"
